SERVER-20512 Remove invalid calls to makeObjOwnedIfNeeded().

Don't try and make the object owned in DeleteStage if
Collection::deleteDocument() throws a WriteConflictException because we
would have already called saveState() on the child stage, which could
have freed the memory underlying the WorkingSetMember.

Similarly for UpdateStage with Collection::updateDocument().