src/mongo/db/exec/delete.cpp
@@ -157,7 +157,10 @@ PlanStage::StageState DeleteStage::work(WorkingSetID* out) {
             // Ensure that the BSONObj underlying the WorkingSetMember is owned because saveState()
             // is allowed to free the memory.
             if (_params.returnDeleted) {
-                member->makeObjOwnedIfNeeded();
+                // Save a copy of the document that is about to get deleted, but keep it in the
+                // LOC_AND_OBJ state in case we need to retry deleting it.
+                BSONObj deletedDoc = member->obj.value();
+                member->obj.setValue(deletedDoc.getOwned());
             }
 
             // TODO: Do we want to buffer docs and delete them in a group rather than
@@ -174,13 +177,6 @@ PlanStage::StageState DeleteStage::work(WorkingSetID* out) {
                 std::terminate();
             }
 
-            if (_params.returnDeleted) {
-                // Save a copy of the document that is about to get deleted, but keep it in the
-                // LOC_AND_OBJ state in case we need to retry deleting it.
-                BSONObj deletedDoc = member->obj.value();
-                member->obj.setValue(deletedDoc.getOwned());
-            }
-
             // Do the write, unless this is an explain.
             if (!_params.isExplain) {
                 WriteUnitOfWork wunit(getOpCtx());
@@ -190,9 +186,6 @@ PlanStage::StageState DeleteStage::work(WorkingSetID* out) {
 
             ++_specificStats.docsDeleted;
         } catch (const WriteConflictException& wce) {
-            // Ensure that the BSONObj underlying the WorkingSetMember is owned because it may be
-            // freed when we yield.
-            member->makeObjOwnedIfNeeded();
             _idRetrying = id;
             memberFreer.Dismiss();  // Keep this member around so we can retry deleting it.
             *out = WorkingSet::INVALID_ID;
